fix overflow of ski suit tabs

--- a/portfolio/bowdoin-suit/style.css
+++ b/portfolio/bowdoin-suit/style.css
@@ -14,6 +14,10 @@ width:1000px;
 margin-top:5px;
 }
 
+#navbar {
+  overflow: auto;
+}
+
 a {
 display:block;
 font-size:25px;
